add : swagger docs for deleting donation image
